sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var ech : Boolean = true;
  val x = getNombreValeurs();
  val fin = x-2;
  val deb = 0;
  
  while (ech) {
  	ech = false;
    for ( i <- deb to fin){
      if (getValeur(i)>getValeur(i+1)){
        echange(i,i+1);
        ech = true;
      }
    fin=fin-1;  
    }
    for ( i <- fin to deb by -1){
      if (getValeur(i)>getValeur(i+1)){
        echange(i,i+1);
        ech = true;
      }
    deb = deb+1;
}